internal/gatewayapi/testdata/envoyproxy-patch-disabled.in.yaml
envoyProxiesForGateways:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway
    name: patch-disabled
  spec:
    provider:
      type: Kubernetes
      kubernetes:
        envoyDeployment:
          patch:
            type: StrategicMerge
            value:
              spec:
                template:
                  spec:
                    hostNetwork: true
                    dnsPolicy: ClusterFirstWithHostNet
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    infrastructure:
      parametersRef:
        group: gateway.envoyproxy.io
        kind: EnvoyProxy
        name: patch-disabled
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
